🎨 disable buttons in preview, fix preview overlap (#689)
no issue

- when entering preview mode (not split-screen preview) the toolbar buttons are now disabled. This is usually built in to SimpleMDE but that wasn't working because we've moved the location of the toolbar in the DOM
- hides the markdown editor when entering preview mode to prevent the markdown code appearing at the bottom of the preview when the markdown length is longer than the preview length

--- a/ghost/admin/app/styles/layouts/editor.css
+++ b/ghost/admin/app/styles/layouts/editor.css
@@ -303,6 +303,11 @@
     overflow: visible !important;
 }
 
+/* prevent markdown content showing after the preview if the preview is shorter */
+.gh-editor-preview .CodeMirror-scroll {
+    display: none;
+}
+
 .gh-editor .gh-editor-title,
 .gh-editor .CodeMirror-wrap {
     max-width: 760px;
@@ -367,7 +372,8 @@
     stroke: color(var(--darkgrey) l(+15%));
 }
 
-.editor-toolbar a.disabled {
+.editor-toolbar a.disabled,
+.gh-editor-preview .editor-toolbar a:not(.no-disable) {
     pointer-events: none;
     color: lightgray !important;
 }
